[package]
name = "neuroevolution"
version = "0.1.0"
edition = "2021"
default-run = "main"
description = "Neuroevolution framework for testing algorithms on benchmark problems."
authors = ["Samy Haffoudhi <haffoudhisamy@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
cmaes = "0.2.1"
ggez = "0.9.3"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = "1.0.198"
serde_derive = "1.0.198"
toml = "0.8.12"
